# tls-hwacc

./: .gitignore  Cargo.toml  README.md  a.out  c.c  toolchain.toml
.cargo/: config.toml
reference_code/: aes.c  crypto.c
src/: aead.rs  gcm.rs  hash.rs  hmac.rs  hwacc.rs  main.rs
