[package]
name = "tls-hwacc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
webpki-roots = "0.26"
rustls = { version = "0.22"}
tokio-rustls = "0.25"
pki-types = { package = "rustls-pki-types", version = "1" }
sha2 = "*"
hmac = "0.12"
anyhow = "1"
crypto2 = "0.1.2"
ring = "0.17.8"
constant_time_eq = "0.3.0"
ghash = "0.5.1"

aes-gcm = "0.10.3"
rustls-rustcrypto = { git = "https://github.com/RustCrypto/rustls-rustcrypto", version = "0.1" }

# hardware acceleration
nix = {version = "0.28",features = ["fs","ioctl"]}
crypto-bindings = { git = "https://github.com/cloudkernels/crypto-bindings" }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
incremental = false
panic = "abort"